--- a/react/my-app/package.json
+++ b/react/my-app/package.json
@@ -21,6 +21,8 @@
 		"@types/testing-library__react": "^10.2.0",
 		"@typescript-eslint/eslint-plugin": "^2.10.0",
 		"@typescript-eslint/parser": "^2.10.0",
+		"@types/react-transition-group": "^4.2.3",
+		"@types/storybook__addon-info": "^5.2.1",
 		"babel-eslint": "10.1.0",
 		"babel-jest": "^24.9.0",
 		"babel-loader": "8.1.0",
@@ -77,7 +79,12 @@
 		"cross-env": "^7.0.0",
 		"husky": "^4.2.1",
 		"react-scripts": "3.2.0",
-		"rimraf": "^3.0.1"
+		"rimraf": "^3.0.1",
+		"@fortawesome/fontawesome-svg-core": "^1.2.26",
+		"@fortawesome/free-solid-svg-icons": "^5.12.0",
+		"@fortawesome/react-fontawesome": "^0.1.8",
+		"axios": "^0.19.1",
+		"react-transition-group": "^4.3.0"
 	},
 	"scripts": {
 		"start": "node scripts/start.js",
